added cmdbat to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ cogs/__pycache__/misc.cpython-39.pyc
 cogs/__pycache__/skywars.cpython-39.pyc
 cogs/__pycache__/skywarscommands.cpython-39.pyc
 XCStatsbot.7z
+cmd.bat
