dependancies update (its messy but might work)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,51 @@
-git+https://github.com/Rapptz/discord.py
-requests
-aiohttp
-asyncpg
-asyncio
-jsons
+addict==2.4.0
+aiohttp==3.7.3
+aiopypixel==1.8.2
+async-timeout==3.0.1
+asyncio==3.4.3
+asyncpg==0.21.0
+asyncpixel==1.0.3
+attrs==20.3.0
+autopep8==1.5.7
+beautifulsoup4==4.9.3
+bs4==0.0.1
+certifi==2020.12.5
+cffi==1.14.4
+chardet==3.0.4
+click==7.1.2
+dblpy==0.4.0
+discord==1.0.1
+discord.py==1.6.0
+dnspython==2.1.0
+gevent==21.1.2
+greenlet==1.0.0
+grequests==0.6.0
+hypixel==0.7.9
+idna==2.10
+jsons==1.4.2
+lib==3.0.0
+lxml==4.6.2
+multidict==5.1.0
+numpy==1.20.3
+oauthlib==3.1.0
+parsedatetime==2.6
+psutil==5.8.0
+py-trello==0.17.1
+pycodestyle==2.7.0
+pycparser==2.20
+pydantic==1.7.3
+python-dateutil==2.8.1
+pytz==2021.1
+ratelimiter==1.2.0.post0
+requests==2.25.1
+requests-oauthlib==1.3.0
+six==1.15.0
+soupsieve==2.1
+sqlparse==0.4.1
+toml==0.10.2
+typing-extensions==3.7.4.3
+typish==1.9.2
+urllib3==1.26.3
+yarl==1.6.3
+zope.event==4.5.0
+zope.interface==5.2.0
